Revert "Some settings/updates for better JDK_21 (#3437)"
This reverts commit 8ee7ddd50f434e5feec3e54a1bf337c89344b6dd.